--- a/ZenboDacing/src/main/AndroidManifest.xml
+++ b/ZenboDacing/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.robot.asus.ZenboDacing" >
+    package="com.robot.asus.ZenboDacing">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name="com.robot.asus.ZenboDacing.MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".DanceActivity"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="com.asus.intent.category.ZENBO" />
                 <category android:name="com.asus.intent.category.ZENBO_LAUNCHER" />
 
